<?xml version="1.0"?>
<package format="2">
  <name>feasible_region_demo</name>
  <version>0.0.0</version>
  <description>The feasible_region_demo package</description>

  <maintainer email="h-ishida@todo.todo">h-ishida</maintainer>

  <license>TODO</license>

  <depend>jsk_tools</depend>
  <depend>jsk_pcl_ros</depend>
  <depend>jsk_pcl_ros_utils</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
